# api

agent/src/: main.rs
core/: Cargo.toml
core/examples/: remote_host.rs
core/src/: errors.rs  lib.rs  message.rs  request.rs
core/src/command/: child.rs  mod.rs
core/src/command/providers/: generic.rs  mod.rs
core/src/host/: local.rs  mod.rs  remote.rs
core/src/package/: mod.rs
core/src/package/providers/: apt.rs  dnf.rs  homebrew.rs  mod.rs  nix.rs  pkg.rs  yum.rs
core/src/service/: mod.rs
core/src/service/providers/: debian.rs  homebrew.rs  launchctl.rs  mod.rs  rc.rs  redhat.rs  systemd.rs
core/src/telemetry/: mod.rs
core/src/telemetry/providers/: centos.rs  debian.rs  fedora.rs  freebsd.rs  macos.rs  mod.rs  nixos.rs  ubuntu.rs
core_derive/: Cargo.toml  README.md
core_derive/src/: lib.rs
src/: lib.rs
src/host/: ffi.rs  mod.rs  telemetry.rs
src/service/: ffi.rs  mod.rs
src/telemetry/: ffi.rs  mod.rs
